add rest api for calendar requests WT-1549
